application/blueprint/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: default
spec:
  defaultBackend:
    service:
      name: edc-demo-app-service
      port:
        number: 80
